# smtp-client

./: .gitignore  Cargo.toml
src/: input.rs  lib.rs  logger.rs  mail.rs  main.rs  message.rs
src/connection/: mod.rs  parser.rs  protocol.rs
