[package]
name = "smtp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "*"
webpki-roots = "*"
base64 = "*"
toml = "0.7.3"
serde = "1.0.158"
serde_derive = "1.0.158"
rpassword = "7.2"
mail-builder = "0.2.5"

[dependencies.regex]
version = "1.3"
default-features = false
features = ["std"]